fix: Correct mobile overflow issues
- Made'Enter New Zip Code' smaller so it does not overflow.
- Made the sidebar a little bigger for mobile devices so
 'Enter New Zip Code' button has some space around it.
- Changed size of search filter input box since it was
overflowing the sidebar.
- Results were overflowing the bottom of the sidebar so
added ability to scroll if needed.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,6 +24,7 @@ body {
   z-index: 5;
   width: 270px;
   height: 95%;
+  overflow: auto;
 }
 
 .app-title {
@@ -48,6 +49,7 @@ body {
 
 .new-zip {
   text-align: center;
+  font-size: .5em;
 }
 
 .attribution {
@@ -64,20 +66,24 @@ body {
 }
 
 @media screen and (max-width: 480px) {
-    .sidebar, .attribution {
-      width: 150px;
-    }
+  .sidebar {
+    width: 170px;
+  }
 
-    li {
-      padding: .4em 0;
-    }
+  li {
+    padding: .4em 0;
+  }
 
-.minus-btn {
-  padding: 7px 11px;
-  font-size: 1.2em;
-}
+  .minus-btn {
+    padding: 7px 11px;
+    font-size: 1.2em;
+  }
 
-    .zip {
-      font-size: .8em;
-    }
+  .zip {
+    font-size: .8em;
+  }
+
+  .results-title {
+    font: 1em;
+  }
 }
